2008-01-23  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-end-of-output): Add `tramp-rsh-end-of-line' into
	the regexp.
	(tramp-find-shell, tramp-open-connection-setup-interactive-shell):
	Don't send `tramp-rsh-end-of-line' additionally, when setting the
	prompt.
	(tramp-wait-for-output): Distinguish different prompt formats.
	(tramp-get-test-nt-command): Don't check for "\n" in the prompt.
	(tramp-local-host-p): Check whether temp directory is writable.

2008-01-17  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-remote-process-environment): Set "LC_ALL=C".

2008-01-14  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-local-host-p): Use `tramp-file-name-host'
	instead of `tramp-file-name-real-host'.

2008-01-12  Michael Albinus  <michael.albinus@gmx.de>

	Update copyrights.

2008-01-08  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-process-file): Handle the case where
	DESTINATION is a consp with t as car.
	(tramp-wait-for-output): We shall remove exactly what has been
	find by the search.

2008-01-04  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-remote-process-environment): Add "LC_CTYPE=C".
	Reported by Pete Forman <pete.forman@westerngeco.com>.
	(tramp-perl-encode, tramp-perl-decode): Update copyrights.

2008-01-04  Glenn Morris  <rgm@gnu.org>

	* tramp-smb.el (tramp-smb-handle-insert-directory): Use mapc
	rather than mapcar.

2007-12-23  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.1.12 released.

	* tramp.el: New todo item.

	* tramp-smb.el (tramp-smb-handle-insert-directory): Handle "-F"
	switch.  Reported by Mark T. Kennedy <mkennedy@diamondbackcap.com>.

2007-12-06  D. Goel  <deego3@gmail.com>

	* trampver.el.in (x): Fix buggy call to `error'.

2007-12-18  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-compat.el (top): Require cl only when compiling.
	Reported by Glenn Morris <rgm@gnu.org>.

2007-12-17  Michael Albinus  <michael.albinus@gmx.de>
