@@ -1,3 +1,8 @@
+2008-01-24  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-do-copy-or-rename-file): Flush the cache of the
+	source file in case of `rename'.
+
 2008-01-23  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-end-of-output): Add `tramp-rsh-end-of-line' into
